<resources>
    <string name="app_name">Github User Search</string>
    <string name="hint_search">Search User</string>
    <string name="cd_user_profile">User Profile</string>
    <string name="Bio">Bio</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repositories">Repository</string>
    <string name="update_at">Updated At %s</string>
    <string name="public_repositories">Public Repositories</string>
</resources>